--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "javascript-template",
+  "name": "dropdown-menu",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
@@ -22,6 +22,7 @@
     "eslint-config-prettier": "^10.1.2",
     "eslint-plugin-prettier": "^5.2.6",
     "globals": "^16.0.0",
+    "html-loader": "^5.1.0",
     "html-webpack-plugin": "^5.6.3",
     "prettier": "3.5.3",
     "style-loader": "^4.0.0",
